@@ -1,3 +1,4 @@
+5/28/13 workaround for layout of invisible SaturatedIndicator, due to change in semantics of scenery bounds
 5/24/13 fix lint errors
 5/24/13 first attempt at precipitate view, ridiculously slow for some reason
 5/24/13 add "Saturated!" indicator
